<resources>
    <string name="app_name">ConCap</string>
    <string name="btn_instrument">Instrument</string>
    <string name="btn_move">Move</string>
    <string name="btn_scan">Scan</string>
    <string name="btn_add">Add</string>
    <string name="btn_exit" />
    <string name="btn_quit">exit</string>
    <string name="ctn_btn" />
    <string name="next_bttn">Contnue</string>
    <string name="result_scan" />
    <string name="nam">Edit nme</string>
    <string name="tablename" />
    <string name="name">Edit name</string>
    <string name="sclad">Container name</string>
    <string name="time">Date and time</string>
    <string name="username">user</string>
    <string name="insert" />
    <string name="insert_db">Insert new instrument to db</string>
    <string name="ques" />
    <string name="quest">Help</string>
    <string name="Profile" />
    <string name="Profile1">Profile</string>
    <string name="can_ru" />
    <string name="scan_ru">Сканировать</string>
    <string name="next_ru">Продолжить</string>
    <string name="add">Добавить</string>
    <string name="move_change">Сдать/Принять</string>
    <string name="inst_ru">Инструменты</string>
    <string name="prof_ru">Профиль</string>
    <string name="quest_ru">Помощь</string>
    <string name="product">Инструмент для передачи</string>
    <string name="barcode">Номер на штрихкоде</string>
    <string name="stock">Склад</string>
    <string name="mol">Материально ответственное лицо</string>
    <string name="save">Сохранить</string>
    <string name="_152123154">152123154</string>
    <string name="search_ru">Поиск</string>
    <string name="seaea">Поиск</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
    <string name="give">Сдать</string>
    <string name="pick">Принять</string>
    <string name="approve_item">Принять</string>
    <string name="refresh">Обновить</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="barcode_ru">Штрихкод</string>
    <string name="title_ru">Номенклатура</string>
    <string name="user_ru">Ответственное лицо</string>
    <string name="stock_ru">Склад</string>
    <string name="stat">Статус</string>
</resources>
