<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_authorization">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="382dp"
        android:layout_height="119dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="244dp"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/logo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#4d72a0"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"

            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="432dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/usr_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Profile" />

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="232dp" />

        <Button
            android:id="@+id/ctn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkLogin"
            android:text="@string/next_ru" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>